--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -15,9 +15,10 @@
 </div>
 
 <div class="panel panel-default">
+
+  <input type="text" class="form-control" id="searchbar">
     <!-- Default panel contents -->
     <div class="panel-heading">Users Data</div>
-  
     <!-- Table -->
     <table class="table">
         <tr>
@@ -28,25 +29,42 @@
             <th>เงิน</th>
             <th>พ้อย</th>
         </tr>
-        <%userData.forEach((element)=>{%>   
+        <tbody id="dataTable">
+          <%userData.forEach((element)=>{%>   
             <tr>
                 <td>
-                    <div class="input-group">
-                        <input type="text" class="form-control" value="<%=element.username%>">
+                    <!-- <div class="input-group">
+                        <input type="text" class="form-control" value="">
                         <span class="input-group-btn">
                           <button class="btn btn-default" type="submit">Edit</button>
                         </span>
-                      </div><!-- /input-group -->
+                      </div>/input-group -->
+                      <%=element.username%>
                 </td>
                 <td><%=element.fullName%></td>
                 <td><%=element.address.address%> / <%=element.address.subdistrict%> / <%=element.address.district%> / <%=element.address.city%> / <%=element.address.postCode%></td>
-                <td><%=element.bank.bookBank%> / <%=element.bank.bookBankNumber%> / <%=element.bank.bookBankBranch%></td>
+                <td><%=element.bank.bank%> / <%=element.bank.bookBank%> / <%=element.bank.bookBankNumber%> / <%=element.bank.bookBankBranch%></td>
                 <td><%=element.userWallet.money%></td>
                 <td><%=element.userWallet.point%></td>
             </tr>
         <%})%>
+
+        </tbody>
+        
     </table>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      $("#searchbar").on("input", function() {
+        var value = $(this).val().toLowerCase();
+        $("#dataTable tr").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+    </script>
 
-
-<%-include("partials/footer.ejs")-%>
+  </body>
+  </html>
